--- a/style.css
+++ b/style.css
@@ -1,13 +1,109 @@
-body, html {
-	margin:0;
-	color:#444;
-	height:100%;
-	background-color:#fff;
-	line-height: 30px;
+body,
+html {
+    margin: 0;
+    color: #444;
+    height: 100%;
+    background-color: #fff;
+    line-height: 30px;
 }
 
 img {
-	max-width:100%;
-	height:auto;
+    max-width: 100%;
+    height: auto;
 }
+
+
+/* Pre-loader */
+
+#loader-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1000;
+}
+
+#loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    text-align: center;
+    z-index: 1001;
+}
+
+span {
+    display: block;
+    height: 20px;
+    width: 20px;
+    background: #ddd;
+    border-radius: 50%;
+    position: absolute;
+    top: 0px;
+}
+
+#ball-1 {
+    animation: bounce 1s ease-in-out infinite;
+}
+
+#ball-2 {
+    position: absolute;
+    left: 40px;
+    animation: bounce 1s ease-in-out 0.33s infinite;
+}
+
+#ball-3 {
+    position: absolute;
+    left: 80px;
+    animation: bounce 1s ease-in-out 0.66s infinite;
+}
+
+@keyframes bounce {
+    0%,
+    75%,
+    100% {
+        transform: translateY(0px);
+    }
+    25% {
+        transform: translateY(-30px);
+    }
+}
+
+#loader-wrapper .loader-section {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 1000;
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+}
+
+.loader-section.section-left {
+    left: 0;
+}
+
+.loader-section.section-right {
+    right: 0;
+}
+
+.loaded #loader {
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+
+.loaded #loader-wrapper {
+    visibility: hidden;
+    -webkit-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    transform: translateY(-100%);
+    -webkit-transition: all 0.3s 1s ease-out;
+    transition: all 0.3s 1s ease-out;
+}
+
+/* End Loader */
+
 
