--- a/style.css
+++ b/style.css
@@ -160,3 +160,32 @@ header {
 	height:100vh;
 	position: relative;
 }
+
+.jumbotron-content{
+	text-align:center;
+	position:absolute;
+	top:50%;
+	right:0;
+	left:0;
+	transform: translateY(-50%);
+    z-index: 9;
+}
+
+.jumbotron-content h1 {
+  color:#fff;
+  font-size:60px;
+  font-weight:400;
+
+}
+
+.hero-content ul {
+  list-style:none;
+}
+
+
+.jumbotron-content h1 span {
+  color:#fff;
+  font-size:50px;
+  font-weight:300;
+
+}
