--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ img {
     height: auto;
 }
 
-h2{
-    font-size:40px;
-    font-family:"Linden Hill";
+h2 {
+    font-size: 40px;
+    font-family: "Linden Hill";
 }
 
 header.navbar-fixed-top {
@@ -34,6 +34,8 @@ header.navbar-fixed-top {
     font-weight: 500;
 }
 
+
+
 .navbar-fixed-top .light-logo {
     opacity: 0;
     display: none;
@@ -47,7 +49,6 @@ header.navbar-fixed-top {
 header.navbar-fixed-top .menu-links a {
     color: #444;
 }
-
 
 
 /* Pre-loader 
@@ -155,23 +156,19 @@ header {
     width: 100%;
     z-index: 99;
     line-height: 30px;
-    border-bottom:1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 header .dark-logo {
-    opacity:0;
-    display:none;
+    opacity: 0;
+    display: none;
 }
 
 .menu-links {
     text-align: right;
 }
 
-.logo .logo-light {
-
-}
-
-
+.logo .logo-light {}
 
 .menu-links ul li {
     display: inline-block;
@@ -185,10 +182,9 @@ header .dark-logo {
     padding: 10px;
     text-transform: uppercase;
     text-decoration: none;
-    color:#fff;
-    font-weight:400;
+    color: #fff;
+    font-weight: 400;
 }
-
 
 .menu-links ul li:hover > a {
     color: #592c11;
@@ -228,8 +224,6 @@ header .dark-logo {
     text-align: center;
     animation-duration: 1s;
     animation-name: fadeInUp;
-    
-    
 }
 
 .jumbotron-content ul {
@@ -263,48 +257,44 @@ header .dark-logo {
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.5) inset, 0 0 20px rgba(255, 255, 255, 0.2);
 }
 
+
 /* Services Section */
 
-.services-section{
+.services-section {
     background-color: #f1e8ca;
-    padding:20px;
-    padding-bottom:40px;
-    animation-duration:1s;
+    padding: 20px;
+    padding-bottom: 40px;
+    animation-duration: 1s;
     animation-name: fadeInLeft;
     animation-timing-function: ease-in-out;
-
 }
 
-.services-section h2{
-
-    color:#745151;
-    text-align:center;
-    margin-top:50px;
-    font-family: 'lato','sans-serif';
-    margin-bottom:40px;
-    font-size:35px;
+.services-section h2 {
+    color: #745151;
+    text-align: center;
+    margin-top: 50px;
+    font-family: 'lato', 'sans-serif';
+    margin-bottom: 40px;
+    font-size: 35px;
 }
-
 
 .service-1 {
-    text-align:center;
+    text-align: center;
 }
 
-.service-1 .service-content h3{
-    color:#745151;
+.service-1 .service-content h3 {
+    color: #745151;
 }
 
 .service-1 .service-content p {
     font-family: 'lato', 'sans-serif';
-    color:#745151;
+    color: #745151;
 }
 
-
 .service-1 .service-icon i {
-        color: #745151;
+    color: #745151;
     font-size: 60px;
-    text-align:center;
-    
+    text-align: center;
 }
 
 .service-1 .service-content a {
@@ -316,51 +306,175 @@ header .dark-logo {
     font-size: 15px;
     height: 45px;
     line-height: 45px;
-    padding:0 10px;
-    text-decoration:none;
+    padding: 0 10px;
+    text-decoration: none;
 }
 
-.service-1 .service-content a:hover{
-    color:#dd855c;
-    border:1px solid #dd855c;
-
+.service-1 .service-content a:hover {
+    color: #dd855c;
+    border: 1px solid #dd855c;
 }
 
 #row2 {
-    padding-top:60px;
+    padding-top: 60px;
 }
-.portfolio-section{
-    background-color:#f1e8ca;
+
+.portfolio-section {
+    background-color: #f1e8ca;
 }
+
 .portfolio-section h2 {
-    text-align:center;
+    text-align: center;
 }
 
-.portfolio-image-2{
-    padding-top:21px;
+.portfolio-image-last {
+    padding-top: 21px;
 }
 
-.footer-section{
-    text-align:center;
+.footer-section {
+    text-align: center;
 }
 
-.btn_large{
-    margin:30px;
-    padding:20px 30px;
-    font-size:18px;
-    border:2px solid #745151;
+.btn_large {
+    margin: 30px;
+    padding: 20px 30px;
+    font-size: 18px;
+    border: 2px solid #745151;
     text-transform: uppercase;
-    font-family:'lato';
-    font-weight:500;
-    color:#745151;
-    background-color:rgba(255,255,255,0);
+    font-family: 'lato';
+    color: #745151;
+    background-color: rgba(255, 255, 255, 0);
+}
 
+.btn_large:hover {
+    background-color: #745151;
+    color: #fff;
+}
+
+.portfolio-images{
+    margin:0;
+    padding:0;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0px;
+    right: 0px;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #9ebd9e;
+    overflow: hidden;
+}
+
+.overlay-small {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0px;
+    right: 30px;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #9ebd9e;
+    overflow: hidden;
+}
+
+.portfolio-item:hover .overlay {
+    opacity: 0.95;
+}
+
+.portfolio-title {
+    color: #fff;
+    font-size: 28px;
+    font-family: 'lato';
+    position: absolute;
+    top: 30%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    opacity: 1;
+    z-index: 1000;
+    padding-bottom: 20px;
+}
+
+.portfolio-p {
+    color: #fff;
+    font-family: 'lato', 'sans-serif';
+    font-size: 20px;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    opacity: 1;
+    z-index: 1000;
+}
+
+.btn_medium {
+    position: absolute;
+    top: 75%;
+    left: 25%;
+    border: 2px solid #fff;
+    color: #fff;
+    padding: 10px 30px;
+    font-size: 18px;
+    font-family: 'lato';
+    margin-top: 20px;
 }
 
 
 
-.btn_large:hover{
-  background-color:#745151;
-  color:#fff;
+
+.portfolio-images:hover .overlay-small {
+    opacity: 0.85;
 }
+
+
+
+.no-padding{
+    padding-right: 0px;
+    padding-left:0px;
+    
+}
+
+.no-padding-1{
+    padding-right:0px;
+    padding-left:0px;
+    
+}
+
+.no-padding-2{
+    padding-right: 0px;
+    padding-left:0px;
+    padding-bottom:15px;
+}
+.portfolio-large-image{
+    margin-top:-15px;
+}
+
+.overlay-large {
+
+    position: absolute;
+    top: -15px;
+    bottom: 0px;
+    left: 0px;
+    right: 30px;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #9ebd9e;
+    overflow: hidden;
+}
+
+.telecom-property:hover .overlay-large {
+    opacity: 0.85;
+}
+
+
 
