--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ img {
 
 h2 {
     font-size: 40px;
-    font-family: "Linden Hill";
+    font-family: 'Rubik';
 }
 
 header.navbar-fixed-top {
@@ -33,8 +33,6 @@ header.navbar-fixed-top {
     z-index: 999;
     font-weight: 500;
 }
-
-
 
 .navbar-fixed-top .light-logo {
     opacity: 0;
@@ -178,7 +176,7 @@ header .dark-logo {
 }
 
 .menu-links ul li a {
-    font-family: "Didact Gothic", sans-serif;
+    font-family: sans-serif;
     padding: 10px;
     text-transform: uppercase;
     text-decoration: none;
@@ -260,8 +258,8 @@ header .dark-logo {
 
 /* Services Section */
 
-.services-section {
-    background-color: #f1e8ca;
+.welcome-services-section {
+    background-color: #fff;
     padding: 20px;
     padding-bottom: 40px;
     animation-duration: 1s;
@@ -269,13 +267,30 @@ header .dark-logo {
     animation-timing-function: ease-in-out;
 }
 
-.services-section h2 {
-    color: #745151;
+.welcome-heading {
+    color: #444;
+    font-size: 40px;
+    font-family: 'Roboto', 'sans-serif';
+    text-align: center;
+    padding: 50px;
+}
+
+.welcome p {
+    font-size: 18px;
+    line-height: 28px;
+    font-family: 'dosis', 'sans-serif';
+    color: #000;
+    padding: 0 7%;
+    text-align: center;
+}
+
+.services-heading {
+    color: #444;
     text-align: center;
     margin-top: 50px;
-    font-family: 'lato', 'sans-serif';
+    font-family: 'Helvetica', 'sans-serif';
     margin-bottom: 40px;
-    font-size: 35px;
+    font-size: 27px;
 }
 
 .service-1 {
@@ -283,24 +298,24 @@ header .dark-logo {
 }
 
 .service-1 .service-content h3 {
-    color: #745151;
+    color: #444;
 }
 
 .service-1 .service-content p {
     font-family: 'lato', 'sans-serif';
-    color: #745151;
+    color: #444;
 }
 
 .service-1 .service-icon i {
-    color: #745151;
+    color: #444;
     font-size: 60px;
     text-align: center;
 }
 
 .service-1 .service-content a {
-    border: 1px solid #745151;
+    border: 1px solid #29aba4;
     box-shadow: 0 0 25px rgba(255, 255, 255, 0) inset;
-    color: #745151;
+    color: #444;
     display: inline-block;
     font-family: "Lato", sans-serif;
     font-size: 15px;
@@ -315,16 +330,18 @@ header .dark-logo {
     border: 1px solid #dd855c;
 }
 
-#row2 {
-    padding-top: 60px;
-}
+
+/* Portfolio Section */
 
 .portfolio-section {
-    background-color: #f1e8ca;
+    background-color: #F5F5DC;
 }
 
 .portfolio-section h2 {
+    padding: 30px;
     text-align: center;
+    font-size: 35px;
+    font-family: 'lato', 'sans-serif';
 }
 
 .portfolio-image-last {
@@ -339,21 +356,70 @@ header .dark-logo {
     margin: 30px;
     padding: 20px 30px;
     font-size: 18px;
-    border: 2px solid #745151;
+    border: 2px solid #444;
     text-transform: uppercase;
     font-family: 'lato';
-    color: #745151;
+    color: #444;
     background-color: rgba(255, 255, 255, 0);
 }
 
 .btn_large:hover {
-    background-color: #745151;
+    background-color: #444;
     color: #fff;
 }
 
-.portfolio-images{
-    margin:0;
-    padding:0;
+
+/* Get A Quote Section */
+
+.work-with-us {
+    background-image: url('http://i67.tinypic.com/155hs7c.jpg');
+    background-size: cover;
+    height: 80vh;
+}
+
+.work-header h2 {
+    color: #fff;
+    font-family: 'dosis', 'sans-serif';
+    font-size: 26px;
+    font-weight: 600;
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 10px;
+}
+
+.work-subheader {
+    color: #fff;
+    font-family: 'catamaran', 'sans-serif';
+    font-size: 50px;
+    padding: 10px;
+    text-align: center;
+}
+
+.work-paragraph {
+    text-align: center;
+    color: #fff;
+    padding: 20px;
+}
+
+.btn_large.quote_btn {
+    color: #fff;
+    border: 2px solid #fff;
+    padding: 15px 40px;
+    text-transform: uppercase;
+    font-family: 'catamaran', 'sans-serif';
+    font-size: 22px;
+    text-align: center;
+    margin-left: 41%;
+}
+
+.btn_large.quote_btn:hover {
+    background-color: rgba(255, 255, 255, 1);
+    color: #333;
+}
+
+.portfolio-images {
+    margin: 0;
+    padding: 0;
 }
 
 .overlay {
@@ -366,7 +432,7 @@ header .dark-logo {
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: #9ebd9e;
+    background-color: #012a54;
     overflow: hidden;
 }
 
@@ -380,7 +446,7 @@ header .dark-logo {
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: #9ebd9e;
+    background-color: #b49b05;
     overflow: hidden;
 }
 
@@ -390,11 +456,12 @@ header .dark-logo {
 
 .portfolio-title {
     color: #fff;
-    font-size: 28px;
+    font-size: 32px;
     font-family: 'lato';
     position: absolute;
-    top: 30%;
-    left: 45%;
+    text-align: center;
+    top: 45%;
+    left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     opacity: 1;
@@ -402,63 +469,62 @@ header .dark-logo {
     padding-bottom: 20px;
 }
 
-.portfolio-p {
-    color: #fff;
-    font-family: 'lato', 'sans-serif';
-    font-size: 20px;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    opacity: 1;
-    z-index: 1000;
-}
-
 .btn_medium {
-    position: absolute;
-    top: 75%;
-    left: 25%;
-    border: 2px solid #fff;
-    color: #fff;
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #000;
     padding: 10px 30px;
     font-size: 18px;
     font-family: 'lato';
-    margin-top: 20px;
 }
 
+.btn_medium.btn1 {
+    position: absolute;
+    top: 55%;
+    left: 40%;
+}
 
+.btn_medium.btn2 {
+    position: absolute;
+    top: 55%;
+    left: 33%;
+}
 
+.btn_medium.btn3 {
+    position: absolute;
+    top: 55%;
+    left: 44%;
+}
+
+.btn_medium:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    color: #000;
+}
 
 .portfolio-images:hover .overlay-small {
-    opacity: 0.85;
+    opacity: 0.95;
 }
 
-
-
-.no-padding{
+.no-padding {
     padding-right: 0px;
-    padding-left:0px;
-    
+    padding-left: 0px;
 }
 
-.no-padding-1{
-    padding-right:0px;
-    padding-left:0px;
-    
-}
-
-.no-padding-2{
+.no-padding-1 {
     padding-right: 0px;
-    padding-left:0px;
-    padding-bottom:15px;
+    padding-left: 0px;
 }
-.portfolio-large-image{
-    margin-top:-15px;
+
+.no-padding-2 {
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-bottom: 15px;
+}
+
+.portfolio-large-image {
+    margin-top: -15px;
 }
 
 .overlay-large {
-
     position: absolute;
     top: -15px;
     bottom: 0px;
@@ -468,13 +534,10 @@ header .dark-logo {
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: #9ebd9e;
+    background-color: #444444;
     overflow: hidden;
 }
 
 .telecom-property:hover .overlay-large {
-    opacity: 0.85;
+    opacity: 0.95;
 }
-
-
-
