--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ header .dark-logo {
 }
 
 .jumbotron-section {
-    background: rgba(0, 0, 0, 0) url("http://i66.tinypic.com/dd2arr.jpg") no-repeat fixed 0 0 / cover;
+    background: rgba(0, 0, 0, 0) url("http://i66.tinypic.com/2rffx44.png") no-repeat fixed 0 0 / cover;
     height: 100%;
     position: relative;
     -moz-box-shadow: 2px 2px 3px #888;
@@ -226,6 +226,7 @@ header .dark-logo {
 
 .jumbotron-content ul {
     margin-top: 82px;
+    margin-bottom:40px;
 }
 
 .jumbotron-content ul li {
@@ -250,10 +251,77 @@ header .dark-logo {
 }
 
 .jumbotron-content ul li a:hover {
-    background: #592c11 none repeat scroll 0 0;
-    border-color: #592c11;
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.5) inset, 0 0 20px rgba(255, 255, 255, 0.2);
+    border:none;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.2) inset, 0 0 20px rgba(255, 255, 255, 0.2);
 }
+
+.jumbotron-content ul li:nth-child(1) a:hover {
+    background-color: #3d589b;
+}
+
+.jumbotron-content ul li:nth-child(2) a:hover {
+    background-color: #34cbff;
+}
+
+.jumbotron-content ul li:nth-child(3) a:hover {
+    background-color: #0077B5;
+}
+
+.jumbotron-content ul li:nth-child(4) a:hover {
+    background-color: #d34836;
+}
+
+.jumbotron-content ul li:nth-child(5) a:hover {
+    background-color: #000;
+}
+
+.jumbotron-buttons a {
+
+    
+    padding:14px 30px;
+    font-family:'dosis';
+    font-size:20px;
+    text-decoration:none;
+    margin:20px 10px;
+    margin-top:40px;
+    text-transform: uppercase;
+    border-radius:2px;
+    
+    
+}
+
+
+.btn-large.btn-jumbo {
+    background-color:#555;
+    color:#fff;
+    border:2px solid #555;
+
+}
+
+.btn-large.btn-jumbo2 {
+    background-color:rgba(255,255,255,0.5);
+    color:#444;
+    border:2px solid #555;
+    
+}
+
+.btn-large.btn-jumbo:hover{
+    background-color:#333;
+}
+
+.btn-large.btn-jumbo2:hover {
+    background-color:rgba(255,255,255,0.7);
+    border:2px solid #555;
+    
+    
+}
+
+
+
+
+
+
+
 
 
 /* Services Section */
@@ -384,9 +452,8 @@ header .dark-logo {
     color: #fff;
     font-family: 'dosis', 'sans-serif';
     font-size: 26px;
-    font-weight: 600;
     text-align: center;
-    padding-top: 80px;
+    padding-top: 100px;
     padding-bottom: 10px;
 }
 
@@ -426,12 +493,9 @@ header .dark-logo {
     font-family:'Roboto', sans-serif;
 }
 
-.portfolio-images {
-    margin: 0;
-    padding: 0;
-}
+/* Portfolio Section */
 
-.portfolio-overlay {
+.portfolio-image .portfolio-overlay {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -441,29 +505,20 @@ header .dark-logo {
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: #012a54;
+    background-color: #fff;
     overflow: hidden;
+
+}
+
+.portfolio-overlay {
+    padding:0;
 }
 
 
 
-.portfolio-item:hover .portfolio-overlay {
-    opacity: 0.95;
-}
-
-.portfolio-title {
-    color: #fff;
-    font-size: 32px;
-    font-family: 'lato';
-    position: absolute;
-    text-align: center;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    opacity: 1;
-    z-index: 1000;
-    padding-bottom: 20px;
+.portfolio-image:hover .portfolio-overlay {
+    opacity: 0.45;
+    padding:0;
 }
 
 
@@ -471,8 +526,30 @@ header .dark-logo {
 .image{
     height:60vh;
     width:100%;
-    margin-top: 30px;
+    padding:0;
+
+    
     -webkit-box-shadow: 4px 4px 15px -1px rgba(0,0,0,0.5);
--moz-box-shadow: 4px 4px 15px -1px rgba(0,0,0,0.5);
-box-shadow: 4px 4px 15px -1px rgba(0,0,0,0.5);
+    -moz-box-shadow: 4px 4px 15px -1px rgba(0,0,0,0.5);
+    box-shadow: 4px 4px 15px -1px rgba(0,0,0,0.5);
 }
+
+.portfolio-header{
+    text-align:center;
+    font-size:20px;
+    font-family:'Open Sans Condensed', sans-serif;
+    font-weight:600;
+    margin:20px;
+}
+
+.header-section h2{
+
+    text-align:center;
+    font-family:'Roboto', 'sans-serif';
+    font-size:35px;
+    margin:30px;
+
+
+
+}
+
