--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html {
     margin: 0;
     color: #444;
     height: 100%;
+    width:100%;
     background-color: #fff;
     line-height: 30px;
     text-decoration: none;
@@ -336,69 +337,99 @@ header .dark-logo {
 /* End Jumbotron */
 
 
-/* Services Section */
+/* Services +Welcome Sections */
 
 .welcome {
-    background-color: #fff;
+    background-image:url("http://i64.tinypic.com/2im2yd2.jpg");
     
-    padding: 20px;
+    padding: 60px;
     animation-duration: 1s;
     animation-name: fadeInLeft;
     animation-timing-function: ease-in-out;
 }
 
-
-.welcome-heading {
-    color: #686868;
-    font-size: 22px;
+.welcome-main-header {
+    font-size: 32px;
+    line-height: 32px;
     font-family: 'open sans', 'sans-serif';
-    text-align: left;
-    padding-top: 30px;
-    font-weight:200;
+    color: #3d3d3d;
+    margin-bottom: 30px;
+    font-weight:500;
+    text-align:center;
+    padding: 0;
 }
 
-.welcome-heading span {
-    color:#6fa9a7;
+
+
+.welcome-header {
+    font-family:'Roboto', 'sans-serif';
+    font-size:42px;
+    line-height:42px;
+    color:#3d3d3d;
+    text-align:center;
+    padding:0px 120px;
+
+
 }
 
-.welcome-paragraph span {
-    color:#6fa9a7;
+.welcome-header span {
+    font-family: 'cabin sketch';
+    font-size:40px;
 }
+
 
 .welcome p {
-    font-size: 18px;
-    line-height: 28px;
+    font-size: 20px;
+    line-height: 26px;
     font-family: 'open sans', 'sans-serif';
-    color: #686868;
+    color: #3d3d3d;
+    margin-bottom: 30px;
     padding: 0;
-    font-weight:200;
-    text-align: left;
+    font-weight:400;
+    text-align: center;
+    padding:10px 190px;
 }
 
-.welcome-image{
-    margin-left: 30px;
-
+.welcome:after {
+    display: block;
+    position: absolute;
+    content: '';
+    width: 50px;
+    height: 50px;
+    bottom: -400px;
+    left: 50%;
+    margin-left: -25px;
+    background-color: #fff;
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    z-index: 1;
 }
+
 
 /* Services Section */
 
 
 
 .services{
-    background-color: #eee;
+    background-image:url("http://i64.tinypic.com/2a9brz7.jpg");
     padding:30px 120px;
 }
+
+
 .services-heading {
-    color: #444;
+    color: #6fa9a7;
     text-align: center;
     font-family: 'open sans', 'sans-serif';
-    
-    font-size: 27px;
+    font-weight:600;
+    padding-top:30px;
+    font-size: 30px;
 }
+
 .services-subheader {
     font-family: 'open sans', 'sans-serif';
     font-weight:600;
-    color:#062221;
+    color:#3d3d3d;
     font-size:26px;
     font-style:italic;
     text-align:center;
@@ -423,10 +454,11 @@ header .dark-logo {
 .services .services-heading {
     font-family: 'open sans condensed', 'sans-serif';
     font-size:40px;
+
 }
 
 .service .service-content h3 {
-    color: #062221;
+    color: #3d3d3d;
     font-size:18px;
     font-weight:600;
     font-family:'open sans';
@@ -442,6 +474,28 @@ header .dark-logo {
     color: #6fa9a7;
     font-size: 60px;
     text-align: center;
+}
+
+.service:hover .service-icon i{
+    -webkit-animation: spin 0.5s linear;
+   -moz-animation: spin 0.5s linear;
+   -o-animation: spin 0.5s linear;
+   animation: spin 0.5s linear;
+   animation-iteration-count: 1;
+
+}
+
+@-moz-keyframes spin {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
 }
 
 
@@ -468,39 +522,29 @@ header .dark-logo {
 }
 
 
-.services-btn .btn_1 {
-    
-    background-color: #062221;
 
-}
-
-.services-btn .btn_1:hover {
-    
-    background-color: #323e3e;
-
-}
 
 
 /* Portfolio Section */
 
 .portfolio-section {
-    background-color: #eee;
+    background-color: #fff;
+    padding:40px;
 }
+
+
 
 .portfolio-section h2 {
-    padding: 30px;
+    
+    margin-top:40px;
     text-align: center;
     font-size: 35px;
-    font-family: 'lato', 'sans-serif';
+    font-family: 'open sans', 'sans-serif';
 }
 
-.portfolio-image-last {
-    padding-top: 21px;
-}
 
-.footer-section {
-    text-align: center;
-}
+
+
 
 .btn_large {
     margin: 30px;
@@ -518,111 +562,66 @@ header .dark-logo {
     color: #fff;
 }
 
-.portfolio-image .portfolio-overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0px;
-    right: 0px;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: #fff;
-    overflow: hidden;
-}
-
-.portfolio-overlay {
-    padding: 0;
-}
-
-.portfolio-image:hover .portfolio-overlay {
-    opacity: 0.45;
-    padding: 0;
-}
 
 .image {
-    height: 60vh;
+    height:30vh;
     width: 100%;
     padding: 0;
-    -webkit-box-shadow: 4px 4px 15px -1px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 4px 4px 15px -1px rgba(0, 0, 0, 0.5);
-    box-shadow: 4px 4px 15px -1px rgba(0, 0, 0, 0.5);
-    border:2px solid #444;
+    -webkit-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
+}
+
+.portfolio-image a img:hover {
+        filter: grayscale(100%);
+
 }
 
 .portfolio-header {
     text-align: center;
-    font-size: 20px;
+    font-size: 14px;
     font-family: 'Open Sans', sans-serif;
-    font-weight: 600;
-    margin-top:15px;
-    margin-bottom: 40px;
-    color:#232929;
+    margin: 5px;
+    color:#555;
+}
+.portfolio-divider {
+    text-align:center;
+    margin-top:20px;
 }
 
-.header-section h2 {
+
+.portfolio-subheader {
+    color:#555;
+    font-size:18px;
+    font-family:'open sans', 'sans serif';
+    font-weight:600;
+    text-align:center;
+}
+
+.portfolio-header-section h2 {
     text-align: center;
     font-family: 'Roboto', 'sans-serif';
     font-size: 35px;
-    margin: 30px;
     color:#232929;
 }
-.portfolio-btn{
-    text-align:center;
-    margin-top:20px;
-    margin-bottom:80px;
-}
-.portfolio-btn a {
 
-    padding:15px 20px;
-    background-color:#232929;
-    color:#eee;
-    text-decoration:none;
-    text-transform: uppercase;
-    font-family:'open sans';
-    font-size:20px;
 
-}
-
-.portfolio-btn a:hover {
-
-    background-color: rgba(255,255,255,0);
-    border: 2px solid #232929;
-    color:#232929;
-}
 
 /* Get A Quote Section */
 
 .work-with-us {
-    background-image: url('http://i67.tinypic.com/155hs7c.jpg');
-    background-size: cover;
-    height: 80vh;
+    background-color:#3d3d3d;
+    
+    
 }
 
-.work-header h2 {
-    color: #fff;
-    font-family: 'dosis', 'sans-serif';
-    font-size: 26px;
-    text-align: center;
-    padding-top: 100px;
-    padding-bottom: 10px;
-}
+.work-text {
+    font-size:28px;
+    color:#fff;
+    font-weight:400;
+    margin-top:45px;
+    font-family:'open sans condensed';
 
-.work-subheader {
-    color: #fff;
-    font-family: 'Roboto', 'sans-serif';
-    font-size: 50px;
-    padding: 10px;
-    text-align: center;
-}
-
-.work-paragraph {
-    text-align: center;
-    color: #fff;
-    padding: 20px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 20px;
 }
 
 .btn_large.quote_btn {
@@ -634,7 +633,7 @@ header .dark-logo {
     font-size: 22px;
     text-align: center;
     margin-left: 40%;
-    margin-top: 40px;
+    margin-top: 35px;
 }
 
 .btn_large.quote_btn:hover {
@@ -643,6 +642,10 @@ header .dark-logo {
     border:2px solid #fff;
     font-size: 22px;
     font-family: 'Roboto', sans-serif;
+}
+.skills-section{
+    background-color:#eee;
+   margin:30px;
 }
 
 
